--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -1,6 +1,7 @@
 .home{
     background: linear-gradient(to right, #FF9B26 50%, #2D2D2D 50%);
     color: black;
+    overflow: auto;
 }
 .Logo{
     /* text-align: center; */
