--- a/src/Components/ex4.css
+++ b/src/Components/ex4.css
@@ -6,3 +6,16 @@
     overflow: auto;
     
 }
+.room-button{
+    font-weight: bold;
+    padding: 1vh 5vw;
+    background-color: #2D2D2D;
+    color: #B63CF8;
+    border-radius: 30px;
+    margin-top: 1vh;
+    margin-left: 1vw;
+}
+.selected{
+    background-color: #B63CF8;
+    color: #2D2D2D;
+}
