--- a/src/Components/inv2.css
+++ b/src/Components/inv2.css
@@ -27,3 +27,21 @@
     background-color: #B63CF8;
     color: #2D2D2D;
 }
+.continue-button{
+    font-size: larger;
+    font-weight: bold;
+    padding: 1vh 5vw;
+    background-color: #2D2D2D;
+    color: #B63CF8;
+    border-radius: 30px;
+    margin-top: 30vh;
+    margin-left: 75vw;
+    
+}
+.continue-button:hover{
+    background-color: #EE8100;
+    color: black;
+    transition: 0.5s;
+    cursor: pointer;
+    box-shadow: #200031 1px 2px 1px 1px;
+}
