--- a/src/Components/inv2.css
+++ b/src/Components/inv2.css
@@ -1,15 +1,17 @@
-.inv2{
+.inv2 {
     background-color: #2D2D2D;
     height: 100vh;
     display: block;
     background-size: 100%;
     overflow: auto;
 }
-.heading{
+
+.heading {
     margin-left: 70vw;
     color: #FF9B26;
 }
-.roll-btn{
+
+.roll-btn {
     font-weight: bold;
     padding: 1vh 5vw;
     background-color: #2D2D2D;
@@ -18,30 +20,37 @@
     margin-top: 1vh;
     margin-left: 1vw;
 }
-.roll-btn:hover{
+
+.roll-btn:hover {
     transition: 0.2s;
     box-shadow: #2D2D2D 1px 1px 1px 1px;
 }
-.checked{
+
+.checked {
     transition: 0.2s;
     background-color: #B63CF8;
     color: #2D2D2D;
 }
-.continue-button{
+
+.continue-button {
     font-size: larger;
     font-weight: bold;
     padding: 1vh 5vw;
     background-color: #2D2D2D;
     color: #B63CF8;
     border-radius: 30px;
-    margin-top: 30vh;
+    margin-top: 5vh;
     margin-left: 75vw;
-    
 }
-.continue-button:hover{
+
+.continue-button:hover {
     background-color: #EE8100;
     color: black;
     transition: 0.5s;
     cursor: pointer;
     box-shadow: #200031 1px 2px 1px 1px;
+}
+
+.cs1 {
+    color: #FF9B26;
 }
